# code-mower

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  SECURITY.md  SUPPORT.md  code-mower-package-manifest.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: acp-bridge-spike.md  architecture.md  authoring-intelligence.md  builder-experiments.md  calibration-notes.md  calibration-pilot.md  cloud-benchmarking.md  cloud-contributor-runbook.md  cloud-data-contract.md  cloud-sharing.md  code-structure-roadmap.md  commercial-boundary.md  current-state-and-roadmap.md  doctrine-lens-proof-v2.md  early-adopter-invite-runbook.md  early-adopter-v05.md  first-run-transcript.md  first-user-demo-transcript.md  first-user-install-rehearsal-alpha5.md  first-user-install-rehearsal-alpha6.md  first-user-install-rehearsal-alpha8.md  first-user-install-rehearsal.md  friendly-user-rollout-v05.md  github-setup.md  lane-promotion-policy.md  launch-command-surface.md  lens-calibration-report.md  mirror-removal-runbook.md  oss-v1-checklist.md  package-customization.md  planning-work-orders.md  prd-addendum-v05-beta.md  privacy-threat-model.md  provider-matrix.md  public-release-checklist.md  pypi-release.md  quickstart.md  repo-strategy.md  reviewer-value-report.md  sample-doctor-output.md  (+2 more)
scripts/: dev-python  fresh_clone_rehearsal.py  guard_package_workflows.py  privacy_scan.py  smoke_easy_mode.py
templates/: calibration-corpus.json  code-mower.yml.j2  context-packs.example.json  providers.yml  reviewer-value-report.example.md
tests/: test_calibration_effect_report.py  test_calibration_truth.py  test_checks.py  test_claude_cli_bounce.py  test_clear_stale.py  test_cloud_client.py  test_cloud_git_metadata.py  test_cloud_manifest.py  test_cloud_reports.py  test_coderabbit_cli_audit_pr.py  test_doctor_actions_cost_summary.py  test_doctor_actions_failure_selection.py  test_doctor_boundaries.py  test_doctor_github_checks.py  test_doctor_output.py  test_doctor_privacy.py  test_doctor_provider_env_required.py  test_doctor_provider_env_tokens.py  test_doctor_provider_probe.py  test_doctor_provider_review_hygiene.py  test_doctor_registry.py  test_local_llm_github_helpers.py  test_provider_local_cli.py  test_provider_runners_comments.py  test_provider_runners_git.py  test_provider_runners_github_pr.py  test_provider_runners_pr_worktree.py  test_provider_runners_process.py  test_provider_runners_repo_paths.py  test_provider_runners_text_schema.py  test_provider_runners_workspace.py  test_release_hygiene.py  test_reviewer_metrics_core.py  test_work_orders.py
(+228 files in other folders)
